[package]
edition = "2021"
name = "factory"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "factory"

[dependencies]
getrandom = {version = "0.2", default-features = false, features = ["custom"]}
near-contract-standards = "4.0.0"
near-sdk = "4.0.0"
token = {path = "../token", version = "0.1.0"}
uuid = {version = "1.2.1", features = ["v4", "fast-rng", "serde"]}

[features]
testnet = ["token/testnet"]
